Fixed off-by-one bug in react-grid-gallery causing rows to wrap too soon (before filling with images). Expanded width percentage of gallery.

--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -1,7 +1,7 @@
 .gallery {
   display: inline-block;
   margin: 10px;
-  width: 85%;
+  width: 80%;
   overflow: auto;
 }
 
